tests/paczka2/big_fuzzy/37076947.err
Error in line 19: KDROXQPK S443 61,60
Error in line 27: UgZ8viXT7X S286 23,6
Error in line 23: KDROXQPK S443 13,4
Error in line 40: S413 S443 45,5
Error in line 54: QM7t A310 92,39
Error in line 53: QM7t A310 28,4
Error in line 46: ePqvu8x S443 5,7
Error in line 55: lE05R4 A310 33,1
Error in line 61: lE05R4 S413 89,8
Error in line 71: lx0iAfb9Umj S286 96,6
Error in line 68: QM7t A310 30,2
Error in line 91: QM7t S286 -1,0
Error in line 86: ePqvu8x S413 12,6
Error in line 90: S413 S286 55,7
Error in line 98: lE05R4 A310 24,1
Error in line 97: S413 S443 81,3
Error in line 92: UgZ8viXT7X S286 42,0
Error in line 111: UgZ8viXT7X S443 226,5
Error in line 89: QM7t S286 31,8
Error in line 96: lx0iAfb9Umj S413 35,2
Error in line 124: QM7t A310 3,1
Error in line 128: QM7t S286 65,7
Error in line 119: S413 S443 75,7
Error in line 131: QM7t S413 52,5
Error in line 136: lE05R4 S443 9,6
Error in line 129: UgZ8viXT7X A310 36,2
Error in line 151: UgZ8viXT7X S413 259,9
Error in line 160: S413 A310 73,9
Error in line 163: S413 S413 60,1
Error in line 149: lx0iAfb9Umj S413 34,7
Error in line 197: UgZ8viXT7X S286 118,45
Error in line 174: UgZ8viXT7X S286 31,1
Error in line 201: UgZ8viXT7X S413 78,3
Error in line 202: UgZ8viXT7X A310 75,2
Error in line 208: KDROXQPK S286 428,8
Error in line 204: UgZ8viXT7X S413 1,8
Error in line 218: ePqvu8x A310 10,7
Error in line 213: lx0iAfb9Umj A310 2,2
Error in line 226: lx0iAfb9Umj S286 31,9
Error in line 242: KDROXQPK S286 22,11
Error in line 239: QM7t S443 93,8
